--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,8 @@ worker_cpu_affinity auto;
 worker_rlimit_nofile 523264;
 worker_shutdown_timeout 20;
 
-error_log /var/run/openresty-error.log notice;
-pid /var/run/openresty.pid;
+error_log /var/log/${NGINX}-error.log notice;
+pid /var/run/${NGINX}.pid;
 
 pcre_jit on;
 
@@ -52,11 +52,11 @@ http {
 
     access_log /dev/stdout json;
 
-    client_body_temp_path /var/run/openresty/nginx-client-body;
-    proxy_temp_path       /var/run/openresty/nginx-proxy;
-    fastcgi_temp_path     /var/run/openresty/nginx-fastcgi;
-    uwsgi_temp_path       /var/run/openresty/nginx-uwsgi;
-    scgi_temp_path        /var/run/openresty/nginx-scgi;
+    client_body_temp_path /var/run/${NGINX}/nginx-client-body;
+    proxy_temp_path       /var/run/${NGINX}/nginx-proxy;
+    fastcgi_temp_path     /var/run/${NGINX}/nginx-fastcgi;
+    uwsgi_temp_path       /var/run/${NGINX}/nginx-uwsgi;
+    scgi_temp_path        /var/run/${NGINX}/nginx-scgi;
 
     sendfile on;
 
