--- a/openresty/Dockerfile
+++ b/openresty/Dockerfile
@@ -13,6 +13,10 @@ RUN chmod +x run.sh && \
 # FROM nginx:1.21.4
 FROM openresty/openresty:1.19.9.1-buster
 
+ENV NGINX=openresty \
+    NGINX_DIR=/etc/openresty \
+    NGINX_FILE=nginx.conf
+
 COPY --from=agent /agent/ /
 
 ENTRYPOINT ["/run.sh"]
