--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ http {
         skywalking_tracer = require("skywalking.tracer")
     }
 
-    include /etc/openresty/mime.types;
+    include /etc/${NGINX_TYPE}/mime.types;
     default_type application/octet-stream;
 
     log_format json '{"@timestamp":"$time_iso8601",'
